--- a/src/scss/_hahu.scss
+++ b/src/scss/_hahu.scss
@@ -755,6 +755,7 @@ $ppw: 36px;
 }
 
 .school-feed-con {
+  min-height: 1000px;
   background-color: #000 !important;
   .news-con {
     background-color: #000 !important;
