--- a/src/app/feature-modules/user/home-con/schoolfeed/schoolfeed.component.html
+++ b/src/app/feature-modules/user/home-con/schoolfeed/schoolfeed.component.html
@@ -5,7 +5,7 @@
       <app-feed-post [post]="p" [account]="account"></app-feed-post>
     </div>
 
-    <div class="spinner-con">
+    <div class="spin-con">
       <ngx-spinner bdColor="rgba(152,61,61,0)"
                    size="default"
                    color="#dddddd"
