--- a/src/app/feature-modules/user/home-con/home-page/post/post.component.html
+++ b/src/app/feature-modules/user/home-con/home-page/post/post.component.html
@@ -1,8 +1,10 @@
 <div class="post" ngClass="{{post?.postMetaData[1]?.value}}">
 
 
-  <div class="cap-b" ngClass="{{post?.postMetaData[0]?.value}}"  *ngIf="post?.content != null" (click)="toggleTags()">
+  <div class="cap-b" ngClass="{{post?.postMetaData[0]?.value}}"  (click)="toggleTags()">
+    <p *ngIf="post?.postType == 'PAGE'">{{post?.title}}</p>
     <p *ngIf="post?.contentType != 'HTML'">{{post?.content}}</p>
+
     <div class="c-html-con" *ngIf="post?.contentType == 'HTML'">
       <div class="cHtml">
       </div>
@@ -11,6 +13,7 @@
   </div>
 
   <div class="c-c" *ngIf="post?.featuredImage != null" (click)="toggleTags()">
+
     <div class="p-c bcimg"
          [ngStyle]="{'background-image':'url( data:image/jpeg;base64,' + post?.featuredImage + ')' , 'height':'800px'}">
     </div>
@@ -41,7 +44,7 @@
             <div class="a-con more" [popover]="menuTemplate"
                  [outsideClick]="true">
 
-              <i class="fa fa-ellipsis-v" ></i>
+              <i class="fa fa-ellipsis-v"></i>
 
 
             </div>
@@ -58,11 +61,9 @@
         </div>
       </div>
     </div>
-
     <div class="container" *ngIf="isCommentShown">
       <div class="row">
         <div class="com-con">
-
           <form class="comen-form" [formGroup]="commentForm" (submit)="postComment()">
             <textarea class="form-control form-control-sm"
                       placeholder="Add a comment ... "
@@ -71,23 +72,20 @@
                     class="btn btn-sm btn-outline-success p-btn">post
             </button>
           </form>
-
           <div *ngFor="let c of comments; let i = index;">
             <app-comment [comment]="c"
                          [account]="account"
                          [idx]="i"
                          (removeComment)="removeComment($event)"></app-comment>
           </div>
-
         </div>
-
       </div>
     </div>
 
   </div>
 </div>
 
-<ng-template #menuTemplate >
+<ng-template #menuTemplate>
   <div class="e-m">
     <p>Share</p>
     <p (click)="save()">Save</p>
@@ -95,26 +93,3 @@
     <p>Notify me</p>
   </div>
 </ng-template>
-
-
-
-<!--<div class="container">-->
-<!--<div class="row">-->
-<!--<div class="com-con">-->
-<!--<div class="comen" *ngFor="let c of post?.comments; let i = index;">-->
-<!--<div class="com-p-c-c">-->
-<!--<div class="com-p-c bcimg">-->
-<!--</div>-->
-<!--</div>-->
-
-<!--<div class="com-t-c">-->
-<!--<div class="p-n-c">-->
-<!--<p class="name">Daniel Solomon</p>-->
-<!--<p class="more">1 hour ago</p>-->
-<!--</div>-->
-<!--<p>{{c.content}}</p>-->
-<!--</div>-->
-<!--</div>-->
-<!--</div>-->
-<!--</div>-->
-<!--</div>-->
