--- a/src/scss/_hahu.scss
+++ b/src/scss/_hahu.scss
@@ -333,8 +333,8 @@ $ppw: 36px;
     }
     .com-t-c {
       min-width: 50%;
-      max-width: 80%;
-      //margin-left: 6px;
+      width: 75%;
+      margin-left: 2%;
       padding: 5px 8px;
       background-color: #f6f6f6;
       border-radius: 10px;
@@ -785,6 +785,12 @@ $ppw: 36px;
   width: 100%;
   height: 100%;
   top: 35%;
+}
+
+.spin-con{
+  width: 100%;
+  height: 100px;
+
 }
 
 .mag-img-con {
