++Added menu slide on profile page and also added edit link page on profile image

--- a/src/app/feature-modules/user/home-con/home-page/post/post.component.html
+++ b/src/app/feature-modules/user/home-con/home-page/post/post.component.html
@@ -87,9 +87,9 @@
 
 <ng-template #menuTemplate>
   <div class="e-m">
-    <p>Share</p>
+    <p (click)="share()">Share</p>
     <p (click)="save()">Save</p>
-    <p>Report</p>
-    <p>Notify me</p>
+    <!--<p>Report</p>-->
+    <!--<p>Notify me</p>-->
   </div>
 </ng-template>
