--- a/src/app/feature-modules/user/home-con/schoolfeed/feed-post/feed-post.component.html
+++ b/src/app/feature-modules/user/home-con/schoolfeed/feed-post/feed-post.component.html
@@ -35,7 +35,7 @@
         <div class="row">
           <div class="col-6 s-con">
 
-            <i class="fa fa-share-alt"></i>
+            <!--<i class="fa fa-share-alt"></i>-->
           </div>
 
           <div class="col-6">
@@ -84,23 +84,23 @@
 </div>
 
 
-<div class="container">
-  <div class="row">
-    <div class="com-con">
-      <div class="comen" *ngFor="let c of post?.comments; let i = index;">
-        <div class="com-p-c-c">
-          <div class="com-p-c bcimg">
-          </div>
-        </div>
+<!--<div class="container">-->
+  <!--<div class="row">-->
+    <!--<div class="com-con">-->
+      <!--<div class="comen" *ngFor="let c of post?.comments; let i = index;">-->
+        <!--<div class="com-p-c-c">-->
+          <!--<div class="com-p-c bcimg">-->
+          <!--</div>-->
+        <!--</div>-->
 
-        <div class="com-t-c">
-          <div class="p-n-c">
-            <p class="name">Daniel Solomon</p>
-            <p class="more">1 hour ago</p>
-          </div>
-          <p>{{c.content}}</p>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
+        <!--<div class="com-t-c">-->
+          <!--<div class="p-n-c">-->
+            <!--<p class="name">Daniel Solomon</p>-->
+            <!--<p class="more">1 hour ago</p>-->
+          <!--</div>-->
+          <!--<p>{{c.content}}</p>-->
+        <!--</div>-->
+      <!--</div>-->
+    <!--</div>-->
+  <!--</div>-->
+<!--</div>-->
