--- a/src/scss/_profile.scss
+++ b/src/scss/_profile.scss
@@ -220,6 +220,8 @@
     }
   }
   .profile-dc{
+    background-color:  #2b2e3f;
+
     position: relative;
     margin-bottom: -20px;
     .loading{
