--- a/src/scss/snow.scss
+++ b/src/scss/snow.scss
@@ -11,7 +11,7 @@
   height: 100%;
   margin: 0px;
   position: relative;
-  min-height: 300px;
+  //min-height: 300px;
 }
 .ql-clipboard {
   left: -100000px;
