--- a/src/app/feature-modules/user/profile/profile/profile.component.html
+++ b/src/app/feature-modules/user/profile/profile/profile.component.html
@@ -135,7 +135,7 @@
 
   </div>
 </div>
-<div class="profile-c-c"
+<div class="profile-c-c wra"
      (swipeleft)="swipeCalled('swipeleft')"
      (swiperight)="swipeCalled('swiperight')"
      (swipeup)="swipeCalled('swipeup')"
@@ -160,6 +160,7 @@
          [queryParams]="{userId: userId}">
       Following
     </div>
+
   </div>
   <div class="profile-dc">
     <router-outlet></router-outlet>
