--- a/src/app/feature-modules/user/profile/profile/profile.component.css
+++ b/src/app/feature-modules/user/profile/profile/profile.component.css
@@ -10,3 +10,10 @@
   right: 0;
   top: 5px;
 }
+
+.wra {
+  width: 100%;
+  height: 100%;
+  /*overflow-y: auto;*/
+  touch-action: pan-y !important;
+}
